# elara-labs

./: .gitignore  README.md  elara-math-equations-sheet.tm  pyproject.toml
freefem/: README.md
notebooks/: README.md  atmospheric-attenuation.ipynb  bessel-beams.nb  orbital-trajectory-planning.ipynb  parabolic-antenna-radiation-pattern.nb  power-satellite-parameters-calculations.ipynb  solar-spectrum.nb  tensors-sympy.ipynb
notebooks/archived/: README.md  aperture-attenuation-calc.ipynb  helmholz-fdm-updated-8-31-2024.ipynb
research-docs/: Home of Elara Labs Research.md  README.md
research-docs/Excalidraw/: diffraction-limit.excalidraw.md  free-electron-laser.excalidraw.md  helmholtz-RF-cavity.excalidraw.md  measurement-magnetic-field.excalidraw.md  off-angle-laser-diagram.excalidraw.md  solar-availability-calculation.excalidraw.md  sun-facing design.excalidraw.md
research-docs/computational-work/: 3D plotting in Mathematica.md  Long-term computational software plans.md
research-docs/developer/: Elara software wishlist.md
research-docs/elara-handbook-work/: Elara Handbook TODOs tracker.md  To-be-filled content sections.md
research-docs/engineering/: A realistic space-based prototype.md  RF cavity simulation with aperture.md  Satellite maser engineering.md  Solar mirror engineering.md  Spacecraft engineering.md  Wild engineering ideas.md
research-docs/experimental/: Project Elara first light design.md  Test build of a free-electron maser.md
research-docs/guidelines/: Financial sustainability.md  Open source knowledge.md  (+1 more)
visualizations/: README.md
(+37 files in other folders)
